--- a/style dior.css
+++ b/style dior.css
@@ -9,9 +9,81 @@ html{
     grid-template-columns: 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5% 5%;
     grid-auto-rows: 100px;
 }
+#account-winkel-mandje-button{
+    background-color: white;
+    border-width: 0px;
+    border-radius: 100px;
+}
+#logo{
+    display: flex;
+    align-items: center;
+    margin-left: 425px;
+    margin-top: 50px;
+    scale: 0.8;
+}
+#account{
+    grid-column: 19/20;
+    grid-row: 2;
+    height: 75%;
+    width: 100%;
+    background-color: white;
+    border-width: 0px;
+    border-radius: 100px;
+    transition: 0.5s;
+}
+#account:hover{
+    grid-column: 19;
+    grid-row: 2;
+    height: 75%;
+    width: 100%;
+    background-color: white;
+    border-width: 0px;
+    border-radius: 100px;
+    transition: 0.5s;
+    transform: scale(1.2);
+}
+#winkel-mandje{
+    background-color: white;
+    height: 75%;
+    width: 100%;
+    grid-column: 20/21;
+    grid-row: 2;
+    border-radius: 100px;
+    transition: 0.5s;
+}
+#winkel-mandje:hover{
+    background-color: white;
+    height: 75%;
+    width: 100%;
+    grid-column: 20/21;
+    grid-row: 2;
+    border-radius: 100px;
+    transition: 0.5s;
+    transform: scale(1.2);
+}
+#zoeken{
+    background-color: white;
+    height: 70px;
+    width: 70px;
+    grid-column: 2;
+    grid-row: 2;
+}
+#zoekbalkje{
+    grid-column: 3/5;
+    grid-row: 2;
+    text-align: center;
+    border-radius: 0px;
+    width: 400px;
+    height: 75px;
+    border-width: 2px;
+    border-radius: 100px;
+}
+input{
+    font-size: 70px;
+}
 #dior-kopje{
     grid-column: 1/21;
-    grid-row: 2;
+    grid-row: 3;
     font-size: 460%;
     text-align: center;
     background-color: darkblue;
@@ -21,7 +93,7 @@ html{
 }
 #dior-edt-leegte{
     grid-column: 1/5;
-    grid-row: 3/11;
+    grid-row: 5/13;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0);
@@ -32,21 +104,21 @@ html{
 }
 #dior-edt{
     grid-column: 2;
-    grid-row: 4/7;
+    grid-row: 6/9;
     height: auto;
     width: 140%;
     text-align: center;
 }
 #dior-edt-text{
     grid-column: 1/5;
-    grid-row: 8;
+    grid-row: 10;
     color: white;
     text-align: center;
     font-size: 2.5vw;
 }
 #dior-edp-leegte{
     grid-column: 6/10;
-    grid-row: 3/11;
+    grid-row: 5/13;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0);
@@ -57,21 +129,21 @@ html{
 }
 #dior-edp{
     grid-column: 6;
-    grid-row: 3/7;
+    grid-row: 5/9;
     height: auto;
     width: 196%;
     text-align: center;
 }
 #dior-edp-text{
     grid-column: 6/10;
-    grid-row: 8;
+    grid-row: 10;
     color: white;
     text-align: center;
     font-size: 2.5vw;
 }
 #dior-parfum-leegte{
     grid-column: 12/16;
-    grid-row: 3/11;
+    grid-row: 5/13;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0);
@@ -82,21 +154,21 @@ html{
 }
 #dior-parfum{
     grid-column: 12;
-    grid-row: 3/7;
+    grid-row: 5/9;
     height: auto;
     width: 197%;
     text-align: center;
 }
 #dior-parfum-text{
     grid-column: 12/16;
-    grid-row: 8;
+    grid-row: 10;
     color: white;
     text-align: center;
     font-size: 2.5vw;
 }
 #dior-elixir-leegte{
     grid-column: 17/21;
-    grid-row: 3/11;
+    grid-row: 5/13;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0);
@@ -107,21 +179,21 @@ html{
 }
 #dior-elixir{
     grid-column: 17;
-    grid-row: 4/7;
+    grid-row: 6/9;
     height: auto;
     width: 200%;
     text-align: center;
 }
 #dior-elixir-text{
     grid-column: 17/21;
-    grid-row: 8;
+    grid-row: 10;
     color: white;
     text-align: center;
     font-size: 2.5vw;
 }
 #main-page{
     grid-column: 1/6;
-    grid-row: 2;
+    grid-row: 3;
     text-align: center;
     width: 100%;
     height: 100px;
@@ -132,6 +204,41 @@ html{
     font-size: 3vw;
     border-width: 10px;
 }
+#footer{/*
+    grid-column: 1/21;
+    grid-row: 14/17;
+    background-color: white;
+    color: white;
+    display: flex;*/
+    
+}
+#adress-icon{
+    grid-column: 1;
+    width: 70%;
+    height: auto;
+    text-align: center;
+}
+#phone-icon{
+    grid-column: 2;
+    width: 78%;
+    height: auto;
+    text-align: center;
+}
+#email-icon{
+    grid-column: 3;
+    width: 100%;
+    height: auto;
+    text-align: center;
+
+}
+footer{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    height: auto;
+    grid-row: 14/18;
+    grid-column: 1/21;
+    background-color: white;
+}
 @media (orientation:portrait) {
     html{
         background-image: url(images/dior\ achtergrond\ portrait.png);
@@ -141,7 +248,7 @@ html{
     }
     #dior-kopje{
         grid-column: 1/21;
-        grid-row: 2;
+        grid-row: 4;
         font-size: 460%;
         text-align: center;
         background-color: darkblue;
@@ -151,7 +258,7 @@ html{
     }
     #dior-edt-leegte{
         grid-column: 1/21;
-        grid-row: 3/5;
+        grid-row: 5/7;
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0);
@@ -162,21 +269,21 @@ html{
     }
     #dior-edt{
         grid-column: 4/5;
-        grid-row: 3/5;
+        grid-row: 5/7;
         height: 100%;
         width: auto;
         text-align: center;
     }
     #dior-edt-text{
         grid-column: 5/21;
-        grid-row: 3;
+        grid-row: 5;
         color: white;
         text-align: center;
         font-size: 5.5vw;
     }
     #dior-edp-leegte{
         grid-column: 1/21;
-        grid-row: 6/8;
+        grid-row: 8/10;
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0);
@@ -187,21 +294,21 @@ html{
     }
     #dior-edp{
         grid-column: 4/5;
-        grid-row: 6/8;
+        grid-row: 8/10;
         height: 100%;
         width: auto;
         text-align: center;
     }
     #dior-edp-text{
         grid-column: 5/21;
-        grid-row: 6;
+        grid-row: 8;
         color: white;
         text-align: center;
         font-size: 5.5vw;
     }
     #dior-parfum-leegte{
         grid-column: 1/21;
-        grid-row: 9/11;
+        grid-row: 11/13;
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0);
@@ -212,21 +319,21 @@ html{
     }
     #dior-parfum{
         grid-column: 4/5;
-        grid-row: 9/11;
+        grid-row: 11/13;
         height: 100%;
         width: auto;
         text-align: center;
     }
     #dior-parfum-text{
         grid-column: 5/21;
-        grid-row: 9;
+        grid-row: 11;
         color: white;
         text-align: center;
         font-size: 5.5vw;
     }
     #dior-elixir-leegte{
         grid-column: 1/21;
-        grid-row: 12/14;
+        grid-row: 14/16;
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0);
@@ -237,21 +344,21 @@ html{
     }
     #dior-elixir{
         grid-column: 4/5;
-        grid-row: 12/14;
+        grid-row: 14/16;
         height: 100%;
         width: auto;
         text-align: center;
     }
     #dior-elixir-text{
         grid-column: 5/21;
-        grid-row: 12;
+        grid-row: 14;
         color: white;
         text-align: center;
         font-size: 5.5vw;
     }
     #main-page{
         grid-column: 1/11;
-        grid-row: 1;
+        grid-row: 3;
         text-align: center;
         width: 100%;
         height: 100px;
@@ -261,5 +368,104 @@ html{
         border-color: white;
         font-size: 8vw;
         border-width: 10px;
+    }
+    #account-winkel-mandje-button{
+        background-color: white;
+        border-width: 0px;
+        border-radius: 100px;
+    }
+    #logo{
+        display: flex;
+        align-items: center;
+        margin-left: 125px;
+        margin-top: -5px;
+        scale: 0.6;
+    }
+    #account{
+        grid-column: 15/18;
+        grid-row: 2;
+        height: 75%;
+        width: 100%;
+        background-color: white;
+        border-width: 0px;
+        border-radius: 100px;
+        transition: 0.5s;
+    }
+    #account:hover{
+        grid-column: 15/18;
+        grid-row: 2;
+        height: 75%;
+        width: 100%;
+        background-color: white;
+        border-width: 0px;
+        border-radius: 100px;
+        transition: 0.5s;
+        transform: scale(1.2);
+    }
+    #winkel-mandje{
+        background-color: white;
+        height: 75%;
+        width: 100%;
+        grid-column: 18/21;
+        grid-row: 2;
+        border-radius: 100px;
+        transition: 0.5s;
+    }
+    #winkel-mandje:hover{
+        background-color: white;
+        height: 75%;
+        width: 100%;
+        grid-column: 18/21;
+        grid-row: 2;
+        border-radius: 100px;
+        transition: 0.5s;
+        transform: scale(1.2);
+    }
+    #zoeken{
+        background-color: white;
+        height: 70px;
+        width: 70px;
+        grid-column: 2;
+        grid-row: 2;
+    }
+    #zoekbalkje{
+        grid-column: 6/8;
+        grid-row: 2;
+        text-align: center;
+        border-radius: 0px;
+        width: 200px;
+        height: 75px;
+        border-width: 2px;
+        border-radius: 100px;
+    }
+    input{
+        font-size: 70px;
+    }
+    #adress-icon{
+        grid-column: 1;
+        width: 70%;
+        height: auto;
+        text-align: center;
+    }
+    #phone-icon{
+        grid-column: 2;
+        width: 78%;
+        height: auto;
+        text-align: center;
+    }
+    #email-icon{
+        grid-column: 3;
+        width: 100%;
+        height: auto;
+        text-align: center;
+    
+    }
+    footer{
+        display: grid;
+        grid-template-columns: 33% 33% 33%;
+        height: auto;
+        grid-row: 14/16;
+        grid-column: 1/21;
+        background-color: white;
     }
 }
